2012-10-12  Alexander Pavlov  <apavlov@chromium.org>

        Web Inspector: [Styles] !important priority not honored inside the same declaration
        https://bugs.webkit.org/show_bug.cgi?id=99170

        Reviewed by Yury Semikhatsky.

        Property priorities were not considered inside the same CSS rule. !important properties should stay active
        even if followed by non-!important properties with the same name.

        * inspector/InspectorStyleSheet.cpp:
        (WebCore::InspectorStyle::styleWithProperties):
        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylePropertiesSection.prototype.onpopulate):
        (WebInspector.ComputedStylePropertiesSection.prototype.rebuildComputedTrace):

2012-10-12  Pavel Feldman  <pfeldman@chromium.org>

        Web Inspector: use hard-coded zoom factors instead of 1.2 powers.
        https://bugs.webkit.org/show_bug.cgi?id=99173

        Reviewed by Vsevolod Vlasov.

        Overwise we step too fast.

        * inspector/front-end/inspector.js:
        (WebInspector._zoomIn):
        (WebInspector._zoomOut):
        (WebInspector):

2012-10-12  Yury Semikhatsky  <yurys@chromium.org>

        Web Inspector: move delete watch expression farther from the expand triangle
        https://bugs.webkit.org/show_bug.cgi?id=99166

        Reviewed by Pavel Feldman.

        Aligned 'delete watch expression' button on the right side (was on the left) so
        that it is hard to click it when expanding watched value.

        * inspector/front-end/inspector.css:
        (.properties-tree.watch-expressions):
        (.section .properties .delete-button):

2012-10-12  Pavel Feldman  <pfeldman@chromium.org>

        Web Inspector: trim filename in the call stack sidebar
        https://bugs.webkit.org/show_bug.cgi?id=99169

        Reviewed by Yury Semikhatsky.

        Otherwise long file names are rendered poorly.

        * inspector/front-end/CallStackSidebarPane.js: